# microservice-examples

./: .gitignore  README.md
binding-example/: Makefile
binding-example/src/: lib.rs
binding-example/tests/: test_binding_example.py
blockchain/backend_in_kotlin/: build.gradle.kts
blockchain/backend_in_python/: Makefile  pyproject.toml
blockchain/frontend-app/: package-lock.json  package.json
conversational-ai-manager/: Makefile
conversational-ai-manager/frontend-app/: package-lock.json
conversational-ai-service/: README.md  pyproject.toml
entity_extraction_api/: create_entities.py
entity_extraction_api/src/: config.py  main.py
entity_extraction_api/tests/: test_rules.py
farm-example/: README.md  frontend.Dockerfile
farm-example/app/: database.py  main.py
farm-example/docker/: backend.Dockerfile  local-compose.yml
kotlin-examples/coursecatalog-api/: build.gradle.kts
kotlin-examples/data_structures/: build.gradle.kts  gradle.yaml  settings.gradle.kts
kotlin-examples/kafka_tutorials/: pom.xml
kotlin-examples/ktor_example/: gradle.properties
kotlin-examples/spark_tutorials/: pom.xml
kotlin-java-examples/: .gitignore  README.md
kotlin-java-examples/coursecatalog-api/: README.md  settings.gradle.kts
kotlin-java-examples/ktor_example/: Dockerfile  build.gradle.kts  settings.gradle.kts
kotlin-java-examples/springboot_examples/: README.md
mapreduce_service/: Cargo.toml
mapreduce_service/map_reduce/: __init__.py  generate_word2idx.py  non_map_reduce.py
meetup_stream_data/: Makefile
meetup_stream_data/docker/: local-compose.yml
meetup_stream_data/faust_consumer_service/: __init__.py  models.py
meetup_stream_data/migrations/: alembic.ini  env.py
meetup_stream_data/producer/: meetup_producer.py
microservice_in_go/: main.go
python_microservices/binding-example/: README.md
python_microservices/farm-example/: Makefile  backend.Dockerfile  local-compose.yml  pyproject.toml
python_microservices/farm-example/frontend/: package-lock.json
python_microservices/farm-example/frontend/src/components/: todo.js  todoListView.js
python_microservices/farm-example/src/: main.py
python_microservices/farm-example/src/v1/: database.py  routes.py  services.py
python_microservices/mapreduce_service/: Makefile  README.md  pyproject.toml
python_microservices/mapreduce_service/map_reduce/: helpers.py  map_reduce.py  word2idx.json
python_microservices/meetup_stream_data/: Pipfile  README.md
python_microservices/rust-binding-examples/binding-example/: Cargo.toml  pyproject.toml
python_microservices/rust-binding-examples/binding-example/binding_example/: __init__.py
python_microservices/rust-binding-examples/binding-example/scripts/: script1.py
python_microservices/scripts/: PascalTriangle.py  addTwoNumbers.py  array_running_sum.py  demo_mapreduce.py  largest_volume_size.py  longest_substring.py  non_decreasing_array.py  palindrone_number.py  roman_to_integer.py
python_microservices/trading_signal_service/: README.md  pyproject.toml
python_microservices/trading_signal_service/notebooks/predictive_analysis/: bayesian_analysis.ipynb  kaggle_getting_started.ipynb  probability_and_distributions.ipynb
python_microservices/trading_signal_service/notebooks/risk_analytics/: compare_stocks_with_downside_deviation.ipynb  computing_in_julia.ipynb  mean_variance_analysis.ipynb
react-js-examples/: dev-docker-compose.yml
react-js-examples/chatroom/: package-lock.json
react-js-examples/js-basics/: apis.js  async_syntax.html  async_syntax.js  basics.js  oop.js
react-js-examples/js-chatroom/: package.json
react-js-examples/playground/: apis.html  es6.js
react-js-examples/react-basics/: package-lock.json
react-js-examples/react-native-basics/: App.js  package-lock.json
rust_microservices/: README.md
spring-boot-full-stack-template/: .gitignore  Makefile  README.md
spring-boot-microservices/: local-compose.yml
trading_signal_service/: Makefile
(+251 files in other folders)
