[tool.poetry]
name = "conversational-ai-manager"
version = "0.0.1"
description = "A e2e conversional ai"
authors = ["Liusha"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
rasa = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
