[tool.poetry]
name = "blockchain"
version = "0.1.0"
description = "Blockchain backend application"
authors = ["liusha <liusha.8852@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.942"
importanize = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
