[tool.poetry]
name = "farm-example"
version = "0.1.0"
description = "Fast API and React.js App"
authors = ["Liusha He"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
motor = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
