[tool.poetry]
name = "python_dev"
version = "0.1.0"
description = "Python Devlopment Practice"
authors = ["Liusha-He <liusha.8852@yahoo.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.22.1"
Cython = "^0.29.26"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
pandas = "^1.3.5"
aiohttp = "^3.8.1"
pyarrow = "^8.0.0"
maturin = "^0.12.18"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
importanize = "^0.7.0"
pytest = "^6.2.5"
flake8 = "^4.0.1"
coverage = "^6.4.1"
mypy = "^0.960"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
