[package]
name = "binding-example"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Blazingly fast DataFrame library"

[target.'cfg(not(target_os="linux"))'.dependencies]
mimalloc = { version = "*", default-features = false }

[target.'cfg(target_os="linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }

[lib]
name = "binding_example"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16", features = ["extension-module"] }

[workspace]
