[tool.poetry]
name = "binding-example"
version = "0.1.0"
description = "Python binding with rust lib example [hello world]"
authors = ["liusha"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
dask = "^2022.7.0"
numpy = "^1.23.1"
pyarrow = "^8.0.0"
maturin = ">=0.12,<0.13"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
coverage = "^6.4.2"
flake8 = "^4.0.1"
black = "^22.6.0"
importanize = "^0.7.0"
isort = "^5.10.1"

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"
